<resources>
    <string name="app_name" translatable="false">Tawan Api Chat Application</string>
    <string name="login_">Login</string>
    <string name="main_room">Main Room</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_name">Enter your name</string>
    <string name="send_">Send</string>
    <string name="enter_msg">Message</string>
    <string name="chat_nav">Chat</string>
    <string name="see_online_nav">Online</string>
    <string name="room_nav">Room</string>
    <string name="member_list">Memeber List</string>
    <string name="room_list">Room List</string>
    <string name="create_">Create</string>
    <string name="join_">Join</string>

</resources>
